--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ $(document).ready(function() {
       <div style="text-align: left;">
         <div style="text-align: center;">
           <!-- Logo -->
-          <header id="header" class="clear" style="background-color: black;"><img
-              src="images/aexlogonocoloredit.png" alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;">
+          <header id="header" class="clear" style="background-color: black;"><a
+              href="index.html" title="Home"><img src="images/aexlogonocoloredit.png"
+                alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;"></a>
           </header>
         </div>
       </div>
@@ -86,28 +87,35 @@ $(document).ready(function() {
           </dt>
         </dl>
         <section id="featured_slide_" style="margin-top: 31.3333px; height: 355.667px;">
-          <!-- Slideshow -->
+          <a href="404.html" title="Projects"><!-- Slideshow --></a>
           <ul id="featured_slide_Content">
             <li class="featured_slide_Image">
-              <figure><a href="#"><img src="images/memechaser.png" alt=""></a> <figcaption>
-                  <h2>Meme Chaser 2</h2>
-                  <p>Over 69 GOTY Awards, 2.0 Update Coming Soon.</p>
+              <figure><a href="404.html" title="Projects"><img src="images/memechaser.png"
+                    alt=""></a> <figcaption>
+                  <h2><a href="404.html" title="Projects">Meme Chaser 2</a></h2>
+                  <p><a href="404.html" title="Projects">Over 69 GOTY Awards,
+                      2.0 Update Coming Soon.</a></p>
                 </figcaption> </figure>
             </li>
             <li class="featured_slide_Image">
-              <figure><a href="#"><img src="images/snakesouls.png" alt=""></a> <figcaption>
-                  <h2>SnakeSouls RGB Edition</h2>
-                  <p>Snake but even harder and more unfair.</p>
+              <figure><a href="404.html" title="Projects"><img src="images/snakesouls.png"
+                    alt=""></a> <figcaption>
+                  <h2><a href="404.html" title="Projects">SnakeSouls RGB Edition</a></h2>
+                  <p><a href="404.html" title="Projects">Snake but even harder
+                      and more unfair.</a></p>
                 </figcaption> </figure>
             </li>
             <li class="featured_slide_Image">
-              <figure><a href="#"><img src="images/breakout.png" alt=""></a> <figcaption>
-                  <h2>Breakout Shinjuku Edition</h2>
-                  <p>Straight from a 2000s arcade.</p>
+              <figure><a href="404.html" title="Projects"><img src="images/breakout.png"
+                    alt=""></a> <figcaption>
+                  <h2><a href="404.html" title="Projects">Breakout Shinjuku
+                      Edition</a></h2>
+                  <p><a href="404.html" title="Projects">Straight from a 2000s
+                      arcade.</a></p>
                 </figcaption> </figure>
             </li>
-            <li class="clear featured_slide_Image"><!-- Important - Leave This Empty --><br>
-            </li>
+            <li class="clear featured_slide_Image"><a href="404.html" title="Projects"><!-- Important - Leave This Empty --><br>
+              </a> </li>
           </ul>
         </section>
         <!-- Updates -->
@@ -123,7 +131,7 @@ $(document).ready(function() {
                   </span></span></span></span></div>
           <div style="margin-top: -12.6833px; height: 20px;"><span style="color: white;"><span
                 style="font-family: Alef;"><span style="font-family: Calibri;"><span
-                    style="color: #33ff33;">Read the Latest Update (7/27/2020):</span></span></span></span></div>
+                    style="color: #33ff33;">Read the Latest Update (7/28/2020):</span></span></span></span></div>
           <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
                   <span style="color: #979797;"><span style="font-family: Calibri Light,&quot;Calibri Light&quot;,Times,serif;"></span></span></span></span></span></div>
@@ -153,36 +161,36 @@ $(document).ready(function() {
                   style="font-family: Calibri;"><br>
                 </span></span></span>
             <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"> Website Source Files and Code
-                    v1.0b</span></span></span></div>
+                    style="font-family: Calibri;">&nbsp; Site Resources and Code
+                    v1.1b</span></span></span></div>
           </div>
           <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><span
                   style="color: #ffcc33;"></span></span></span></span>
-          <div><span style="color: white;"><span style="font-family: Alef;"><span
-                  style="font-family: Calibri;"><span style="color: #ffcc33;"></span></span></span></span>
+          <div>
             <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
                     style="font-family: Calibri;"><span style="color: #ffcc33;"><span
-                        style="color: yellow;">Finalized Homepage</span><br>
-                      <span style="color: #33ff33;">Completed About page</span><br>
-                      <span style="color: #33ff33;">Completed 404 page</span><br>
-                      <span style="color: red;">Fixed some page refs</span><br>
-                      <span style="color: yellow;">Updated CSS</span></span></span></span></span><br>
-              <span style="color: white;"><span style="font-family: Alef;"><span
-                    style="font-family: Calibri;"></span></span></span></div>
+                        style="color: #33ff33;">Added gitignore to streamline
+                        branch updates</span><br>
+                      <span style="color: #33ff33;">Updated home, about and 404
+                        pages </span><span style="color: yellow;"><br>
+                        Modified layout and slider CSS<br>
+                        <span style="color: #33ff33;">Added functionality to
+                          more elements</span><br>
+                        Checked sitemap is working as a whole</span></span></span></span></span></div>
             <span style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">
                   <br>
                 </span></span></span></div>
           <div style="text-align: center;"><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;">That's about it 👌.&nbsp; <br>
                 </span></span></span></div>
-          <div style="text-align: center;"><img src="images/bonk.png" alt="" style="width: 404px; height: 336px; margin-left: 21px;"></div>
+          <div style="text-align: center;"><img src="images/craig.jpg" style="width: 405px; height: 336px; margin-left: 5px;"></div>
           <div><span style="color: white;"><span style="font-family: Alef;"><span
                   style="font-family: Calibri;"><br>
                 </span></span></span></div>
           <!-- Update content end --> </div>
       </div>
       <!-- Divider -->
-      <div class="wrapper row3" style="background-color: #cc0000; height: 20px; margin-top: -1001.85px;"><br>
+      <div class="wrapper row3" style="background-color: #cc0000; height: 21px; margin-top: -999.85px;"><br>
       </div>
     </div>
     <!-- Discord -->
