--- a/pages/about.html
+++ b/pages/about.html
@@ -31,8 +31,9 @@ body::-webkit-scrollbar-thumb {
       <div style="text-align: left;">
         <div style="text-align: center;">
           <!-- Logo -->
-          <header id="header" class="clear" style="background-color: black;"><img
-              src="../images/aexlogonocoloredit.png" alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;">
+          <header id="header" class="clear" style="background-color: black;"><a
+              href="../index.html" title="Home"><img src="../images/aexlogonocoloredit.png"
+                alt="Main Logo" style="width: 259.111px; height: 212px; margin-left: -18.7778px; margin-top: -6.43334px;"></a>
           </header>
         </div>
       </div>
@@ -44,8 +45,8 @@ body::-webkit-scrollbar-thumb {
         <ul style="margin-left: 23px; width: 577px;">
           <span style="font-family: Arial;">
             <li><a href="../index.html" title="Home">Home</a></li>
-            <li><a href="pages/error404.html" title="Projects">Projects</a></li>
-            <li><a href="pages/error404.html" title="Works">Works</a></li>
+            <li><a href="../404.html" title="Projects">Projects</a></li>
+            <li><a href="../404.html" title="Works">Works</a></li>
             <li><a href="#">Socials</a>
               <ul style="margin-left: -45px; width: 170px;">
                 <li style="background-color: #fdfdfd;"><br>
