--- a/404.html
+++ b/404.html
@@ -37,17 +37,17 @@ body::-webkit-scrollbar-thumb {
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><br>
                 </span></span></span></div>
           <br>
-          <div style="height: 23px; margin-top: -7px; text-align: center;"><span
+          <div style="height: 7px; margin-top: 26px; text-align: center;"><span
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;">Uh
                   oh, that page doesn't exist. <br>
                 </span></span></span></div>
-          <div style="height: 37px; margin-top: 11px; text-align: center;"><span
+          <div style="height: 26px; margin-top: 19px; text-align: center;"><span
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><span
                     style="color: white;"><span style="font-family: Alef;"><span
-                        style="font-family: Calibri;">Please click <a href="../index.html"
-                          title="Homepage" style="color: #33ff33;">here</a> to
-                        go home.</span></span></span></span></span></span></div>
-          <img src="images/404upscaled.png" alt="" style="width: 293px; height: 256px; margin-top: 25px; margin-left: 335px;">
+                        style="font-family: Calibri;">Please click <a href="index.html"
+                          title="Home" style="color: #33ff33;">here</a> to go
+                        home.</span></span></span></span></span></span></div>
+          <img src="images/404upscaled.png" alt="" style="width: 293px; height: 256px; margin-top: 35px; margin-left: 335px;">
           <div style="height: 31px; margin-top: -94.9px; text-align: center;"><span
               style="color: white;"><span style="font-family: Alef;"><span style="font-family: Calibri;"><br>
                 </span></span></span></div>
